attempting to solve movement on animation on main button, backface-visibility is doing nothing

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -138,7 +138,8 @@ body {
   position: relative;
   font-size: 1.6rem;
   border: none;
-  cursor: pointer; }
+  cursor: pointer;
+  backface-visibility: hidden; }
 
 .btn:hover {
   transform: translateY(-3px);
