--- a/Natours/starter/sass/components/_button.scss
+++ b/Natours/starter/sass/components/_button.scss
@@ -14,6 +14,7 @@
     //Change for the <button> element // instead of <a>
     border: none;
     cursor: pointer;
+    backface-visibility: hidden;
   }
 
   &:hover {
